syntax = "proto3";

package v1;

option go_package = "/consensus/polybft/proto";

message TransportMessage {
  bytes data = 1;
}